--- a/example-k8s-spec.yml
+++ b/example-k8s-spec.yml
@@ -43,7 +43,7 @@ spec:
         - name: vault-tls
           mountPath: /etc/tls
 
-      # This assumes Vault running on local host and K8s running in Minikube using VirtualBox
+      # This assumes Vault running on a pod in the K8s cluster and that the service name is vault
       env:
         - name: VAULT_ADDR
           value: https://vault:8200
